[package]
name = "rust-learn"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
raw_struct_macro = { path = "./raw_struct_macro" }

[[bin]]
name = "rust-learn"
path = "src/main.rs"
